update guide Running a Validator

--- a/src/guides/main/running-a-validator-arbitrum-university-967.yaml
+++ b/src/guides/main/running-a-validator-arbitrum-university-967.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A comprehensive guide to run a Validator
-created: '2023-11-13T11:45:18.479Z'
+created: '2023-12-14T14:01:43.515Z'
 guideType: onboarding
 key: running-a-validator-arbitrum-university-967
 name: Running a Validator
@@ -285,6 +285,91 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 868ae771-9d47-43b0-8d7e-f6ef6b2180b7
+  - content: >-
+      A validator in the context of the Arbitrum Rollup Protocol is a
+      participant who plays a critical role in maintaining the integrity and
+      security of the blockchain network. Here's a detailed explanation based on
+      the provided information:
+
+
+      ### Role and Functions of Validators in the Arbitrum Rollup Protocol
+
+
+      1. **Staking**: Validators can choose to be stakers by depositing ETH as a
+      stake. This stake can be recovered if they are not found to be cheating.
+      The stake acts as a security deposit, ensuring validators act honestly.
+
+
+      2. **Proposing and Confirming RBlocks**: Validators are responsible for
+      proposing new rollup blocks (RBlocks) and confirming the correctness of
+      existing ones. Each RBlock contains various information like the RBlock
+      number, predecessor RBlock number, number of L2 blocks created, and a hash
+      of outputs produced.
+
+
+      3. **Security Enforcement**: A key feature of the rollup protocol is that
+      any single honest validator can force the correct execution of the chain
+      to be confirmed. This means validators play a crucial role in ensuring the
+      security and trustlessness of the Arbitrum chain.
+
+
+      4. **Handling Disputes**: In cases where there's a disagreement over an
+      RBlock, validators may engage in challenges. If a validator disagrees with
+      an RBlock, they can post another RBlock with a different result,
+      potentially leading to a challenge against the first RBlock's staker.
+
+
+      5. **Stake Management**: Validators manage their stakes by staking on
+      RBlocks and their successors. They have to maintain their stake on the
+      latest confirmed RBlock and can extend it to successors. If they lose a
+      challenge, they forfeit their staked funds.
+
+
+      6. **Different Strategies**: Validators can adopt various strategies such
+      as active, defensive, or watchtower. Each strategy has its own set of
+      actions and responsibilities in the protocol.
+
+          - **Active Validators**: Continuously propose new RBlocks.
+          - **Defensive Validators**: Monitor the protocol and intervene only if incorrect RBlocks are proposed.
+          - **Watchtower Validators**: They don't stake or take on-chain actions but monitor the protocol and raise alarms if incorrect RBlocks are proposed.
+
+      7. **Watchtower Mode**: All nodes run in Watchtower mode by default,
+      monitoring for any deviations in the chain state and logging errors if
+      discrepancies are found.
+
+
+      ### Importance of Validators
+
+
+      - **Ensuring Integrity**: They ensure the integrity of the blockchain by
+      confirming transaction results.
+
+      - **Security**: Their role is critical in maintaining the security of the
+      blockchain, especially in the decentralized environment.
+
+      - **Trustlessness**: Validators help in maintaining the trustless nature
+      of the blockchain, where users don't need to trust any single party.
+
+
+      ### Who Can Be a Validator?
+
+
+      - **Open to All**: In principle, anyone can become a validator, though in
+      practice, it's expected that parties with significant stakes in the chain
+      (like developers, exchanges, or power users) will take up this role.
+
+      - **Whitelisting**: Currently, on Arbitrum One, validators/stakers are
+      whitelisted as part of a "State of Progressive Decentralization".
+
+
+      In summary, validators in the Arbitrum Rollup Protocol are essential
+      participants who maintain the security, integrity, and proper functioning
+      of the blockchain through their roles in proposing, confirming, and
+      challenging RBlocks, while their stakes provide a financial incentive for
+      honest participation.
+    name: Intro to Validators
+    stepItems: []
+    uuid: 0dc738e2-3416-4321-b29f-65c28fdc958e
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/running_a_validator_arbitrum_university_967/1699875911417_rectangle_104.png
 uuid: running-a-validator-arbitrum-university-967
