--- a/src/guides/main/running-a-validator-arbitrum-university-967.yaml
+++ b/src/guides/main/running-a-validator-arbitrum-university-967.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A comprehensive guide to run a Validator
-created: '2023-12-14T14:46:53.431Z'
+created: '2023-12-14T15:18:10.914Z'
 guideType: onboarding
 key: running-a-validator-arbitrum-university-967
 name: Running a Validator
@@ -51,7 +51,7 @@ steps:
       ### Types of Validators 
 
 
-      **Active Validator**
+      #### **Active Validator**
 
       This strategy involves validators proactively participating in the network
       by proposing new rollup blocks and maintaining a constant stake in the
@@ -60,7 +60,7 @@ steps:
       having more than one can be resource-intensive.
 
 
-      **Defensive Validator**
+      #### **Defensive Validator**
 
       Defensive validators monitor the rollup protocol and only act if they
       detect an incorrect block being proposed. They will then either propose a
@@ -69,7 +69,7 @@ steps:
       potential dishonest actions.
 
 
-      **Watchtower Validator**
+      #### **Watchtower Validator**
 
       Watchtower validators perform a passive monitoring role, where they do not
       stake but keep an eye on the rollup protocol. If they spot an incorrect
@@ -82,58 +82,46 @@ steps:
       ### Role and Functions of Validators in the Arbitrum Rollup Protocol
 
 
-      1. **Staking**: Validators can choose to be stakers by depositing ETH as a
-      stake. This stake can be recovered if they are not found to be cheating.
-      The stake acts as a security deposit, ensuring validators act honestly.
+      #### 1. **Staking**: 
+
+      Validators can choose to be stakers by depositing ETH as a stake. This
+      stake can be recovered if they are not found to be cheating. The stake
+      acts as a security deposit, ensuring validators act honestly.
 
 
-      2. **Proposing and Confirming RBlocks**: Validators are responsible for
-      proposing new rollup blocks (RBlocks) and confirming the correctness of
-      existing ones. Each RBlock contains various information like the RBlock
-      number, predecessor RBlock number, number of L2 blocks created, and a hash
-      of outputs produced.
+      #### 2. **Proposing and Confirming RBlocks**: 
+
+      Validators are responsible for proposing new rollup blocks (RBlocks) and
+      confirming the correctness of existing ones. Each RBlock contains various
+      information like the RBlock number, predecessor RBlock number, number of
+      L2 blocks created, and a hash of outputs produced.
 
 
-      3. **Security Enforcement**: A key feature of the rollup protocol is that
-      any single honest validator can force the correct execution of the chain
-      to be confirmed. This means validators play a crucial role in ensuring the
-      security and trustlessness of the Arbitrum chain.
+      #### 3. **Security Enforcement**: 
+
+      A key feature of the rollup protocol is that any single honest validator
+      can force the correct execution of the chain to be confirmed. This means
+      validators play a crucial role in ensuring the security and trustlessness
+      of the Arbitrum chain.
 
 
-      4. **Handling Disputes**: In cases where there's a disagreement over an
-      RBlock, validators may engage in challenges. If a validator disagrees with
-      an RBlock, they can post another RBlock with a different result,
-      potentially leading to a challenge against the first RBlock's staker.
+      #### 4. **Handling Disputes**: 
+
+      In cases where there's a disagreement over an RBlock, validators may
+      engage in challenges. If a validator disagrees with an RBlock, they can
+      post another RBlock with a different result, potentially leading to a
+      challenge against the first RBlock's staker.
 
 
-      5. **Stake Management**: Validators manage their stakes by staking on
-      RBlocks and their successors. They have to maintain their stake on the
-      latest confirmed RBlock and can extend it to successors. If they lose a
-      challenge, they forfeit their staked funds.
+      #### 5. **Stake Management**: 
+
+      Validators manage their stakes by staking on RBlocks and their successors.
+      They have to maintain their stake on the latest confirmed RBlock and can
+      extend it to successors. If they lose a challenge, they forfeit their
+      staked funds.
 
     name: Types and Roles
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: 73e117ec-13ea-4a25-bafd-66b2104e4865
-      - answerKeys:
-          - choice_1
-          - choice_2
-          - choice_3
-        choices:
-          - content: Choice 1
-            key: choice_1
-          - content: Choice 2
-            key: choice_2
-          - content: Choice 3
-            key: choice_3
-          - content: Choice 4
-            key: choice_4
-        content: Contents of the question
-        type: MultipleChoice
-        uuid: f05c3999-b7ca-48e8-b63d-4cae6b3a9171
-        explanation: Explanation of the question
+    stepItems: []
     uuid: 792c3404-3c17-4f53-8951-a7e5e9a665ac
   - content: >-
       Validators in the Arbitrum network can adopt several strategies, depending
