update guide Intro to Validator

--- a/src/guides/main/running-a-validator-arbitrum-university-967.yaml
+++ b/src/guides/main/running-a-validator-arbitrum-university-967.yaml
@@ -1,9 +1,9 @@
 categories: []
-content: A comprehensive guide to run a Validator
-created: '2023-12-14T15:18:41.211Z'
+content: A comprehensive guide about Validators
+created: '2023-12-14T15:21:23.575Z'
 guideType: onboarding
 key: running-a-validator-arbitrum-university-967
-name: Running a Validator
+name: Intro to Validator
 publishStatus: Live
 steps:
   - content: >
