--- a/src/guides/main/running-a-validator-arbitrum-university-967.yaml
+++ b/src/guides/main/running-a-validator-arbitrum-university-967.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A comprehensive guide about Validators
-created: '2023-12-14T15:26:49.105Z'
+created: '2023-12-14T15:29:54.954Z'
 guideType: onboarding
 key: running-a-validator-arbitrum-university-967
 name: Intro to Validator
@@ -163,6 +163,63 @@ steps:
     name: Types and Roles
     stepItems: []
     uuid: 792c3404-3c17-4f53-8951-a7e5e9a665ac
+  - content: ''
+    name: Evaluation
+    stepItems:
+      - answerKeys:
+          - B
+        choices:
+          - content: To monitor the rollup protocol and act only when necessary
+            key: A
+          - content: To advance the state of the chain by proposing new rollups
+            key: B
+          - content: To perform a passive monitoring role
+            key: C
+          - content: To manage their stakes by staking on RBlocks and their successors
+            key: D
+        content: What is the main goal of an active validator?
+        type: SingleChoice
+        uuid: 9721ce22-fd67-45d6-85f5-0b24b34a9113
+        explanation: >-
+          The main goal of an active validator is to advance the state of the
+          chain by proposing new rollup blocks and maintaining a constant stake
+          in the network.
+      - answerKeys:
+          - D
+        choices:
+          - content: To propose new rollup blocks
+            key: A
+          - content: To stake on an existing correct block
+            key: B
+          - content: To advance the state of the chain
+            key: C
+          - content: >-
+              To perform a passive monitoring role and alert other parties if
+              they spot an incorrect block
+            key: D
+        content: What is the role of a watchtower validator?
+        type: SingleChoice
+        uuid: f7048af2-c93c-4ad7-a821-170ae64f387f
+        explanation: >-
+          Watchtower validators perform a passive monitoring role, where they do
+          not stake but keep an eye on the rollup protocol. If they spot an
+          incorrect block, they alert other parties so they can take action.
+      - answerKeys:
+          - C
+        choices:
+          - content: They are promoted to active validator
+            key: A
+          - content: They are demoted to watchtower validator
+            key: B
+          - content: They forfeit their staked funds
+            key: C
+          - content: They are removed from the network
+            key: D
+        content: What happens if a validator loses a challenge?
+        type: SingleChoice
+        uuid: 5892b922-fc05-44ee-9d3d-15553136d68b
+        explanation: If a validator loses a challenge, they forfeit their staked funds.
+    uuid: 7838a21b-dedb-4c3c-85d7-5387e31f9010
   - content: >-
       Validators in the Arbitrum network can adopt several strategies, depending
       on their roles and permissions. These strategies include:
@@ -210,10 +267,6 @@ steps:
     name: Validation Strategies
     stepItems: []
     uuid: d5c43d16-0c09-42e2-8526-b494c7ffa349
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: 7838a21b-dedb-4c3c-85d7-5387e31f9010
   - content: ''
     name: Evaluation
     stepItems: []
