--- a/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
+++ b/src/guides/main/introduction-to-arbitrum-arbitrum-university-794.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Exploring the number one Layer 2 solution!
-created: '2024-02-27T16:36:25.685Z'
+created: '2024-02-27T16:37:09.500Z'
 guideType: onboarding
 key: introduction-to-arbitrum-arbitrum-university-794
 name: Introduction to Arbitrum
@@ -699,6 +699,18 @@ steps:
     name: References
     stepItems: []
     uuid: 49ebf9d8-c9ae-482f-a3d0-b5538f2d2ca8
+  - content: ''
+    name: Your Info
+    stepItems:
+      - label: Nickname
+        required: true
+        type: PublicShortInput
+        uuid: 17561df8-5d67-457d-aeb7-70b0cc4d6095
+      - label: Wallet Address (Optional)
+        required: false
+        type: PublicShortInput
+        uuid: 52338d53-e88d-4442-a94a-bb591768aafb
+    uuid: bbd1fe85-db83-4775-ace3-9c29aac2a925
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/introduction_to_arbitrum_arbitrum_university_794/1699877486707_rectangle_89.png
 uuid: introduction-to-arbitrum-arbitrum-university-794
