--- a/src/guides/main/cross-chain-messaging-arbitrum-university-977.yaml
+++ b/src/guides/main/cross-chain-messaging-arbitrum-university-977.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Bridging Blockchains with Seamless Communication
-created: '2023-12-15T11:17:09.437Z'
+created: '2024-02-27T17:33:17.218Z'
 guideType: onboarding
 key: cross-chain-messaging-arbitrum-university-977
 name: Cross Chain Messaging
@@ -757,6 +757,18 @@ steps:
     name: References
     stepItems: []
     uuid: c77989b0-22f7-4926-8e33-9b38540f66e8
+  - content: ''
+    name: Your Info
+    stepItems:
+      - label: Nickname
+        required: false
+        type: PublicShortInput
+        uuid: 6edf0f9d-7df8-4277-b7d8-c8f3e6bb6a3a
+      - label: Wallet Address
+        required: false
+        type: PublicShortInput
+        uuid: ff856cd6-645e-47a9-8724-3f122129398d
+    uuid: 7b680012-346a-4b4e-ac7d-f168f5df45c7
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/cross_chain_messaging_arbitrum_university_977/1699877869240_rectangle_101.png
 uuid: cross-chain-messaging-arbitrum-university-977
