--- a/src/guides/main/voting-on-dao-proposals-arbitrum-university-711.yaml
+++ b/src/guides/main/voting-on-dao-proposals-arbitrum-university-711.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the importance of DAO Voting
-created: '2023-12-12T11:36:18.126Z'
+created: '2024-02-27T18:03:17.363Z'
 guideType: onboarding
 key: voting-on-dao-proposals-arbitrum-university-711
 name: Voting on DAO Proposals
@@ -505,6 +505,18 @@ steps:
     name: Reference
     stepItems: []
     uuid: a488ccbe-7cf7-4aa0-911d-53d2c95048d7
+  - content: ''
+    name: Your Info
+    stepItems:
+      - label: Nickname
+        required: false
+        type: PublicShortInput
+        uuid: 41c18623-210a-4534-898f-58c208ee7666
+      - label: Wallet Address
+        required: false
+        type: PublicShortInput
+        uuid: 2ee07c50-58ed-4f26-9dbd-29ccfe70d644
+    uuid: 764248fb-0bc9-44cb-9cb3-5b668d481d47
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Guide/voting_on_dao_proposals_arbitrum_university_711/1700237955726_rectangle_112.png
 uuid: voting-on-dao-proposals-arbitrum-university-711
