--- a/src/bytes/main/what-is-arbitrum-arbitrum-university.yaml
+++ b/src/bytes/main/what-is-arbitrum-arbitrum-university.yaml
@@ -23,7 +23,8 @@ steps:
       Ethereum's existing tools and smart contracts, which simplifies
       application deployment. The Arbitrum One mainnet supports smart contract
       execution with validation from the Ethereum network.
-    imageUrl: null
+    imageUrl: >-
+      https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Tidbits/what-is-arbitrum-arbitrum-university/1711101551962_png%26skoid%3D6aaadede-4fb3-4698-a8f6-684d7786b067%26sktid%3Da48cca56-e6da-484e-a814-9c849652bcb3%26skt%3D2024-03-21T20%253A59%253A52Z%26ske%3D2024-03-22T20%253A59%253A52Z%26sks%3Db%26skv%3D2021-08-06%26sig%3D5bJQd7kyJXjcWzmkr2KGXxcWsuNM0M0m0Y1ASD1bWqM%253D..png
     stepItems: []
   - name: Benefits
     uuid: 2771822e-3b61-4247-bdfa-6c173ab4f47b
@@ -31,7 +32,8 @@ steps:
       The use of Arbitrum significantly lowers transaction fees, making it a
       cost-effective alternative for running decentralized applications and
       smart contracts compared to Ethereum's mainnet.
-    imageUrl: null
+    imageUrl: >-
+      https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Tidbits/what-is-arbitrum-arbitrum-university/1711101596369_nGIDfLC2p1t3zPuK3%252BG0iusBEiaRssza9b0B528%253D..png
     stepItems: []
   - name: What is Layer 2?
     uuid: 8c71eac7-f980-4c8c-aa54-167eda0d199d
@@ -41,7 +43,8 @@ steps:
       scalability and performance issues by handling transactions off the main
       chain, thus enabling faster processing times and reduced transaction
       costs.
-    imageUrl: null
+    imageUrl: >-
+      https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Tidbits/what-is-arbitrum-arbitrum-university/1711101633024_2H3U8JiL9ohWSM%253D..png
     stepItems: []
   - name: Benefits of Layer 2
     uuid: 8053b896-fead-47dc-bf1c-58e219cad904
@@ -50,7 +53,8 @@ steps:
       transactions per second, reducing costs and improving speed. Despite
       off-chain processing, these typically inherit the strong security
       guarantees of the underlying main chain.
-    imageUrl: null
+    imageUrl: >-
+      https://d31h13bdjwgzxs.cloudfront.net/academy/arbitrum-university/Tidbits/what-is-arbitrum-arbitrum-university/1711101657089_png%26skoid%3D6aaadede-4fb3-4698-a8f6-684d7786b067%26sktid%3Da48cca56-e6da-484e-a814-9c849652bcb3%26skt%3D2024-03-21T21%253A01%253A56Z%26ske%3D2024-03-22T21%253A01%253A56Z%26sks%3Db%26skv%3D2021-08-06%26sig%3Dh8BzNOjMPxMvGr%252BzZGI6JQY0GHMHr89s6xZZdvPBkn8%253D..png
     stepItems: []
   - name: Evaluation
     uuid: a842f292-5d23-43b0-9ba7-8c2327f17f81
